# palnia-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
.smite/: session-metrics.json
npm/: README.md  install.js  package.json  run.js  uninstall.js
src/: client.rs  config.rs  main.rs  types.rs
src/commands/: auth.rs  calendar.rs  events.rs  habits.rs  images.rs  init.rs  mod.rs  tasks.rs  timer.rs  tokens.rs  update.rs
