[package]
name = "palnia-cli"
version = "0.2.4"
edition = "2021"
description = "CLI for Palnia productivity app"
license = "MIT"
repository = "https://github.com/Pamacea/palnia-cli"
homepage = "https://palnia.newalfox.fr"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
dialoguer = "0.11"
tabled = "0.18"
anyhow = "1"
mime_guess = "2"
